workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: queue
spec:
    minReadySeconds: 30
    selector:
        matchLabels:
            app: queue
    replicas: 1
    template:
        metadata:
            # pod name is not needed anymore, as the RS by its own will
            # name the pod - the RS' own name with a random string appended.
            #name: queue-release1
            labels:
                app: queue
        spec:
            containers:
            -   name: queue-container01
                image: richardchesterwood/k8s-fleetman-queue:resources
                resources:
                    requests:
                        memory: 300Mi
                        cpu: 100m

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: position-simulator
spec:
    minReadySeconds: 30
    selector:
        matchLabels:
            app: position-simulator
    replicas: 1
    template:
        metadata:
            # pod name is not needed anymore, as the RS by its own will
            # name the pod - the RS' own name with a random string appended.
            #name: position-simulator
            labels:
                app: position-simulator
        spec:
            containers:
            -   name: position-simulator-container01
                image: richardchesterwood/k8s-fleetman-position-simulator:resources
                resources:
                    requests:
                        memory: 250Mi
                        cpu: 100m

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: position-tracker
spec:
    minReadySeconds: 30
    selector:
        matchLabels:
            app: position-tracker
    replicas: 1
    template:
        metadata:
            # pod name is not needed anymore, as the RS by its own will
            # name the pod - the RS' own name with a random string appended.
            #name: position-tracker
            labels:
                app: position-tracker
        spec:
            containers:
            -   name: position-tracker-container01
                image: richardchesterwood/k8s-fleetman-position-tracker:resources
                resources:
                    requests:
                        memory: 300Mi
                        cpu: 100m

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-gateway
spec:
    minReadySeconds: 30
    selector:
        matchLabels:
            app: api-gateway
    replicas: 1
    template:
        metadata:
            # pod name is not needed anymore, as the RS by its own will
            # name the pod - the RS' own name with a random string appended.
            #name: api-gateway
            labels:
                app: api-gateway
        spec:
            containers:
            -   name: api-gateway-container01
                image: richardchesterwood/k8s-fleetman-api-gateway:resources
                resources:
                    requests:
                        memory: 300Mi
                        cpu: 100m

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: webapp
spec:
    minReadySeconds: 30
    selector:
        matchLabels:
            app: webapp
    replicas: 1
    template:
        metadata:
            # pod name is not needed anymore, as the RS by its own will
            # name the pod - the RS' own name with a random string appended.
            #name: webapp
            labels:
                app: webapp
        spec:
            containers:
            -   name: webapp-container01
                image: richardchesterwood/k8s-fleetman-webapp-angular:release2
                resources:
                    requests:
                        memory: 100Mi
                        cpu: 50m
