mongo-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb
spec:
    minReadySeconds: 30
    selector:
        matchLabels:
            app: mongodb
    replicas: 1
    template:
        metadata:
            # pod name is not needed anymore, as the RS by its own will
            # name the pod - the RS' own name with a random string appended.
            #name: mongodb
            labels:
                app: mongodb
        spec:
            containers:
            -   name: mongodb-container01
                image: mongo:3.6.5-jessie
                volumeMounts:
                -   name: mongodb-persistent-storage
                    mountPath: /data/db
            volumes:
            -   name: mongodb-persistent-storage
                hostPath:
                    path: /mnt/mongodb-persistence
                    type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
    name: fleetman-mongodb

spec:
    # This defines which pods are going to be represented by this service.
    # The service becomes a network endpoint for either other services or
    #   external users to connect to (Eg: browser)
    selector: # all these key-val pairs must match some pods' labels
        app: mongodb

    # ClusterIP type services are accessible only within the cluster;
    # NodePort type services are discoverable outside the cluster as well,
    #   by way of the chosen exposed port.
    type: ClusterIP

    ports:
    -   name: mongoport
        port: 27017
        # target ports are defaulted to ports, hence not specifying
