service-templates.yaml
apiVersion: v1
kind: Service
metadata:
    name: fleetman-webapp

spec:
    # This defines which pods are going to be represented by this service.
    # The service becomes a network endpoint for either other services or
    #   external users to connect to (Eg: browser)
    selector: # all these key-val pairs must match some pods' labels
        app: webapp

    # ClusterIP type services are accessible only within the cluster;
    # NodePort type services are discoverable outside the cluster as well,
    #   by way of the chosen exposed port.
    type: NodePort

    ports:
    -   name: http
        port: 80
        nodePort: 30080 # must be greater than 30000

---
apiVersion: v1
kind: Service
metadata:
    name: fleetman-queue

spec:
    # This defines which pods are going to be represented by this service.
    # The service becomes a network endpoint for either other services or
    #   external users to connect to (Eg: browser)
    selector: # all these key-val pairs must match some pods' labels
        app: queue
        release: "1"

    # ClusterIP type services are accessible only within the cluster;
    # NodePort type services are discoverable outside the cluster as well,
    #   by way of the chosen exposed port.
    type: NodePort

    ports:
    -   name: http
        port: 8161
        nodePort: 30010 # must be greater than 30000
