ingress-public.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: public-routing
spec:
    rules:
    -   host: apalit-k8s-course01.com
        http:
            paths:
            -   path: /
                backend:
                    serviceName: fleetman-webapp
                    servicePort: 80
